--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <li><a class="nav-link scrollto" href="#features">One-to-One</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Inverse</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Test</a></li>
+          <li><a class="nav-link scrollto" href="#pricing">Unit Test</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </li>
         </ul>
@@ -114,7 +114,7 @@
         <div class="row">
           </div>
             <center><h1>Objectives</h1>
-            <p>The objective of the website is to provide a platform for students, teachers, and math enthusiasts to get resources and help on the topic of one-to-one functions and inverse functions. The purpose is to provide informative and helpful information for readers who are looking for answers and guidance. It aims to provide clear and easy-to-understand explanations of these concepts. The website also has a page dedicated to providing examples of questions and solutions, to serve as a reference for the users.</p></center>
+            <h5><p>The objective of the website is to provide a platform for students, teachers, and math enthusiasts to get resources and help on the topic of one-to-one functions and inverse functions. The purpose is to provide informative and helpful information for readers who are looking for answers and guidance. It aims to provide clear and easy-to-understand explanations of these concepts. The website also has a page dedicated to providing examples of questions and solutions, to serve as a reference for the users.</p></h5></center>
 
 
 
@@ -1005,55 +1005,107 @@ The amount of U.S. dollars that can be exchanged for ₱13,995 is approximately 
           <p>One-to-One Function and Inverse Function</p>
         </div>
 
-
 <h2>Test I: Multiple Choice</h2>
-<center>
+
 <p>1.Which of the following graphs is/are an example/s of a one-to-one function?</p> 
 <img src="assets/img/test1.png" class="img-fluid" alt="">
- <ul> 
-<li>a. I and II</li>
-<li>b. II and III</li>
-<li>c. II only</li>
-<li>d. III only</li></ul>
 <br>
-<p>2. Which of the following sets of ordered pairs is/are NOT an example of a one-to-one function?</p>
+<br>
+<input type="radio" name="questions">I and II
+<br>
+<br>
+<input type="radio" name="questions">II and III
+<br>
+<br>
+<input type="radio" name="questions">II only
+<br>
+<br>
+<input type="radio" name="questions" id="correct">III only
+<br>
+<br>
+<br><p>2. Which of the following sets of ordered pairs is/are NOT an example of a one-to-one function?</p> 
 <img src="assets/img/test2.png" class="img-fluid" alt="">
-<ul>
-<li>a. III and IV</li>
-<li>b. II only</li>
-<li>c. I and IV</li>
-<li>d. V only</li></ul>
 <br>
-<p>3.Choose which example/s is/are NOT an example of a one-to-one function. </p>
+<br>
+<input type="radio" name="questions">III and IV
+<br>
+<br>
+<input type="radio" name="questions">II only
+<br>
+<br>
+<input type="radio" name="questions">I and IV
+<br>
+<br>
+<input type="radio" name="questions" id="correct">V only
+<br>
+<br>
+<br>
+<br><p>3.Choose which example/s is/are NOT an example of a one-to-one function.</p> 
 <img src="assets/img/test3.png" class="img-fluid" alt="">
-<ul>
-<li>a. I only</li>
-<li>b. II only</li>
-<li>c. All of the above</li>
-<li>d. None of the above</li></ul>
+<br>
+<br>
+<input type="radio" name="questions">I only
+<br>
+<br>
+<input type="radio" name="questions">II only
+<br>
+<br>
+<input type="radio" name="questions">All of the above
+<br>
+<br>
+<input type="radio" name="questions">None of the above
+<br>
+<br>
 <br>
 <p>4. Choose which graph/s is/are an example of a one-to-one function.</p>
 <img src="assets/img/test4.png" class="img-fluid" alt="">
-<ul>
-<li>a. All of the above</li>
-<li>b. None of the above</li>
-<li>c. I only</li>
-<li>d. II only</li></ul>
+<br>
+<br>
+<input type="radio" name="questions">All of the above
+<br>
+<br>
+<input type="radio" name="questions">None of the above
+<br>
+<br>
+<input type="radio" name="questions">I only
+<br>
+<br>
+<input type="radio" name="questions">II only
+<br>
+<br>
 <br>
 <p>5. Choose which example/s is/are an example of a one-to-one function.</p>
 <img src="assets/img/test5.png" class="img-fluid" alt="">
-<ul>
-<li>a. I and II</li>
-<li>b. II and III</li>
-<li>c. None of the above</li>
-<li>d. All of the above</li></ul>
+<br>
+<br>
+<input type="radio" name="questions">I and II
+<br>
+<br>
+<input type="radio" name="questions">II and III
+<br>
+<br>
+<input type="radio" name="questions">All of the above
+<br>
+<br>
+<input type="radio" name="questions">None of the above
+<br>
+<br>
 <br>
 <p>6. In checking if a graph is a one-to-one function it must pass which test/s?</p>
-<ul>
-<li>a. Horizontal Line Test</li>
-<li>b. Vertical Line Test</li>
-<li>c. Horizontal Line Test and Vertical Line Test</li>
-<li>d. Oblique Line Test</li></ul>
+<br>
+<br>
+<input type="radio" name="questions">Horizontal Line Test
+<br>
+<br>
+<input type="radio" name="questions">Vertical Line Test
+<br>
+<br>
+<input type="radio" name="questions">Horizontal Line Test and Vertical Line Test
+<br>
+<br>
+<input type="radio" name="questions">Oblique Line Test
+<br>
+<br>
 <br>
 <p>7. It is a relationship that relates the values of one variable to the value of another variable.</p>
 <ul>
@@ -1249,12 +1301,13 @@ The amount of U.S. dollars that can be exchanged for ₱13,995 is approximately 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
               <h3>Fusion Function</h3>
-              <p class="pb-3"><em>Qui repudiandae et eum dolores alias sed ea. Qui suscipit veniam excepturi quod.</em></p>
+              <p class="pb-3"><em>Infusing the knowledge of functions with you.</em></p>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +639 56 127 9531<br>
-                <strong>Email:</strong> FunctionFusion@gmail.com<br>
+                938 Aurora Blvd, Cubao,<br>
+                 Quezon City, 1109 Metro Manila<br>
+                 <br>
+                <strong>Email:</strong> functionfusion.io@gmail.com
+<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -1270,9 +1323,9 @@ The amount of U.S. dollars that can be exchanged for ₱13,995 is approximately 
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">One-to-One</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Inverse</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Unit Test</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
           </div>
@@ -1290,7 +1343,10 @@ The amount of U.S. dollars that can be exchanged for ₱13,995 is approximately 
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Understanding one-to-one functions and its inverse made easier with the help of  Function Fusion.<br>
+<br>
+Stay updated and learn more by subscribing to our newsletter, where we constantly improve our materials.<br> 
+<br></p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
