--- a/index.html
+++ b/index.html
@@ -1162,16 +1162,16 @@ function result()
 <img src="assets/img/test1.png" class="img-fluid" alt="">
 <br>
 <br>
-<input type="radio" name="questions1">I and II
+<input type="radio" name="question1">I and II
 <br>
 <br>
-<input type="radio" name="questions1">II and III
+<input type="radio" name="question1">II and III
 <br>
 <br>
-<input type="radio" name="questions1">II only
+<input type="radio" name="question1">II only
 <br>
 <br>
-<input type="radio" name="questions1" id="correct1">III only
+<input type="radio" name="question1" id="correct1">III only
 <br>
 <br>
 <br><p>2. Which of the following sets of ordered pairs is/are NOT an example of a one-to-one function?</p> 
@@ -1198,7 +1198,7 @@ function result()
 <input type="radio" name="question3">I only
 <br>
 <br>
-<input type="radio" name="question3">II only
+<input type="radio" name="question3"id="correct3">II only
 <br>
 <br>
 <input type="radio" name="question3">All of the above
@@ -1218,7 +1218,7 @@ function result()
 <input type="radio" name="question4">None of the above
 <br>
 <br>
-<input type="radio" name="question4">II only
+<input type="radio" name="question4"id="correct4">II only
 <br>
 <br>
 <input type="radio" name="question4">III only
@@ -1238,19 +1238,19 @@ function result()
 <input type="radio" name="question5">None of the above
 <br>
 <br>
-<input type="radio" name="question5">All of the above
+<input type="radio" name="question5"id="correct5">All of the above
 <br>
 <br>
 <br>
 <p>6. In checking if a graph is a one-to-one function it must pass which test/s?</p>
 <br>
-<input type="radio" name="questions6">Horizontal Line Test
+<input type="radio" name="question6">Horizontal Line Test
 <br>
 <br>
 <input type="radio" name="question6">Vertical Line Test
 <br>
 <br>
-<input type="radio" name="question6">Horizontal Line Test and Vertical Line Test
+<input type="radio" name="question6"id="correct6">Horizontal Line Test and Vertical Line Test
 <br>
 <br>
 <input type="radio" name="question6">Oblique Line Test<br>
@@ -1259,7 +1259,7 @@ function result()
 <br>
 <p>7. It is a relationship that relates the values of one variable to the value of another variable.</p>
 <br>
-<input type="radio" name="question7">Function
+<input type="radio" name="question7"id="correct7">Function
 <br>
 <br>
 <input type="radio" name="question7">One-to-One Function
@@ -1268,13 +1268,13 @@ function result()
 <input type="radio" name="question7">Relation
 <br>
 <br>
-<input type="radio" name="question7">Inverse Function
+<input type="radio" name="question">Inverse Function
 <br>
 <br>
 <br>
 <p>8. Determine which of the following is an example of a one-to-one function.</p>
 <br>
-<input type="radio" name="questions">Student to his LRN number.
+<input type="radio" name="questions"id="correct8">Student to his LRN number.
 <br>
 <br>
 <input type="radio" name="questions">The fare to the distance traveled
@@ -1295,7 +1295,7 @@ function result()
 <input type="radio" name="questions">Varsity number of varsity players of the university’s volleyball team.
 <br>
 <br>
-<input type="radio" name="questions">Graph of a sine function
+<input type="radio" name="questions"id="correct9">Graph of a sine function
 <br>
 <br>
 <input type="radio" name="questions">Airport to its airport code
@@ -1309,7 +1309,7 @@ function result()
 <input type="radio" name="questions">Vertical Line Test
 <br>
 <br>
-<input type="radio" name="questions">Horizontal Line Test
+<input type="radio" name="questions"id="correct10">Horizontal Line Test
 <br>
 <br>
 <input type="radio" name="questions">Horizontal Line Test and Vertical Line Test
@@ -1328,7 +1328,7 @@ function result()
 <input type="radio" name="questions">b.<img src="assets/img/pic2.png" class="img-fluid" alt="">
 <br>
 <br>
-<input type="radio" name="questions">c.<img src="assets/img/pic3.png" class="img-fluid" alt="">
+<input type="radio" name="questions"id="correct11">c.<img src="assets/img/pic3.png" class="img-fluid" alt="">
 <br>
 <br>
 <input type="radio" name="questions">d.<img src="assets/img/pic4.png" class="img-fluid" alt="">
@@ -1344,7 +1344,7 @@ function result()
 <input type="radio" name="questions">b.<img src="assets/img/pic6.png" class="img-fluid" alt="">
 <br>
 <br>
-<input type="radio" name="questions">c.<img src="assets/img/pic7.png" class="img-fluid" alt="">
+<input type="radio" name="questions"id="correct12">c.<img src="assets/img/pic7.png" class="img-fluid" alt="">
 <br>
 <br>
 <input type="radio" name="questions">d.<img src="assets/img/pic8.png" class="img-fluid" alt="">
@@ -1353,6 +1353,18 @@ function result()
 <br>
 <p>13. Which of the following is the inverse of the function ?</p>
 <img src="assets/img/ans13.png" class="img-fluid" alt="">
+<br>
+<br>
+<input type="radio" name="questions"id="correct13">a.
+<br>
+<br>
+<input type="radio" name="questions">b.
+<br>
+<br>
+<input type="radio" name="questions">c.
+<br>
+<br>
+<input type="radio" name="questions">d.
 <br>
 <br>
 <br>
@@ -1367,13 +1379,13 @@ function result()
 <input type="radio" name="questions">{(0,9),(8,-5),(6,-1),(-2,-4),(-7,5)}
 <br>
 <br>
-<input type="radio" name="questions">{(5,-7), (-2,-4),(-1,6),(-5,8),(9,0)}
+<input type="radio" name="questions"id="correct14">{(5,-7), (-2,-4),(-1,6),(-5,8),(9,0)}
 <br>
 <br>
 <br>
 <p>15. William is charging a flat rate of ₱650 and an additional ₱60 for every hour spent on an art commission. How long did it take William to finish an art commission upon receiving ₱1730?</p>
 <br>
-<input type="radio" name="questions">a. 18 hours  
+<input type="radio" name="questions"id="correct15">a. 18 hours  
 <br>
 <br>
 <input type="radio" name="questions">b. 16 hours 
@@ -1396,7 +1408,7 @@ function result()
 <input type="radio" name="questions">b.<img src="assets/img/pic20.2.png" class="img-fluid" alt="">
 <br>
 <br>
-<input type="radio" name="questions">c.<img src="assets/img/pic20.3.png" class="img-fluid" alt="">
+<input type="radio" name="questions"id="correct16">c.<img src="assets/img/pic20.3.png" class="img-fluid" alt="">
 <br>
 <br>
 <input type="radio" name="questions">d.<img src="assets/img/pic20.4.png" class="img-fluid" alt="">
@@ -1407,7 +1419,7 @@ function result()
 <img src="assets/img/ans17.png" class="img-fluid" alt="">
 <br>
 <br>
-<input type="radio" name="questions">a.
+<input type="radio" name="questions"id="correct17">a.
 <br>
 <br>
 <input type="radio" name="questions">b.
@@ -1433,7 +1445,7 @@ function result()
 <input type="radio" name="questions">c.<img src="assets/img/pic18.3.png" class="img-fluid" alt="">
 <br>
 <br>
-<input type="radio" name="questions">d.<img src="assets/img/pic18.4.png" class="img-fluid" alt="">
+<input type="radio" name="questions"id="correct18">d.<img src="assets/img/pic18.4.png" class="img-fluid" alt="">
 <br>
 <br>
 <br>
@@ -1450,7 +1462,7 @@ function result()
 <input type="radio" name="questions">c.<img src="assets/img/pic19.3.png" class="img-fluid" alt="">
 <br>
 <br>
-<input type="radio" name="questions">d.<img src="assets/img/pic19.4.png" class="img-fluid" alt="">
+<input type="radio" name="questions"id="correct19">d.<img src="assets/img/pic19.4.png" class="img-fluid" alt="">
 <br>
 <br>
 <br>
@@ -1461,7 +1473,7 @@ function result()
 <input type="radio" name="questions">a.
 <br>
 <br>
-<input type="radio" name="questions">b.
+<input type="radio" name="questions"id="correct20">b.
 <br>
 <br>
 <input type="radio" name="questions">c.
@@ -1476,63 +1488,63 @@ function result()
 
 <p>1. It is a one-to-one function if a horizontal line passes through a function of a graph twice.</p>
    <br>
-                <input type="radio" name="question3">True<br>
+                <input type="radio" name="question21">True<br>
                 <br>
-                <input type="radio" name="question3" id="correct21">Fasle<br>
+                <input type="radio" name="question21" id="correct21">Fasle<br>
                 <br>
 <p>2. It is a one-to-one function if each y values are paired with unique x values.</p>
   <br>
-                <input type="radio" name="question3">True<br>
+                <input type="radio" name="question22"id="correct22">True<br>
                 <br>
-                <input type="radio" name="question3" id="correct3">Fasle<br>
+                <input type="radio" name="question22" >Fasle<br>
                 <br>
 <p>3. A parabola is an example of a one-to-one function.</p>
   <br>
-                <input type="radio" name="question3">True<br>
+                <input type="radio" name="question23">True<br>
                 <br>
-                <input type="radio" name="question3" id="correct3">Fasle<br>
+                <input type="radio" name="question23" id="correct23">Fasle<br>
                 <br>
 <p>4. The relation pairing a book author to her book titles is an example of a one-to-one function.</p>
   <br>
-                <input type="radio" name="question3">True<br>
+                <input type="radio" name="question24">True<br>
                 <br>
-                <input type="radio" name="question3" id="correct3">Fasle<br>
+                <input type="radio" name="question24" id="correct24">Fasle<br>
                 <br>
 <p>5. The relation pairing 700 grade 11 students to their class section is not an example of a one-to-one function. </p>
   <br>
-                <input type="radio" name="question3">True<br>
+                <input type="radio" name="question25" id="correct25">True<br>
                 <br>
-                <input type="radio" name="question3" id="correct3">Fasle<br>
+                <input type="radio" name="question25" >Fasle<br>
                 <br>
 <p>6. The inverse of f(x)=10,000+150x is <img src="assets/img/tof6.png" class="img-fluid" alt=""></p>
   <br>
-                <input type="radio" name="question3">True<br>
+                <input type="radio" name="question26" id="correct26">True<br>
                 <br>
-                <input type="radio" name="question3" id="correct3">Fasle<br>
+                <input type="radio" name="question26" >Fasle<br>
                 <br>
 <p>7. This is an example of an inverse pair <img src="assets/img/tof7.png" class="img-fluid" alt=""></p>
   <br>
-                <input type="radio" name="question3">True<br>
+                <input type="radio" name="question27" id="correct27">True<br>
                 <br>
-                <input type="radio" name="question3" id="correct3">Fasle<br>
+                <input type="radio" name="question27">Fasle<br>
                 <br>
 <p>8. The inverse of h(x)=5y+3 is <img src="assets/img/tof8.png" class="img-fluid" alt=""></p>
   <br>
-                <input type="radio" name="question3">True<br>
+                <input type="radio" name="question28">True<br>
                 <br>
-                <input type="radio" name="question3" id="correct3">Fasle<br>
+                <input type="radio" name="question28" id="correct28">Fasle<br>
                 <br>
 <p>9. This is an example of an inverse pair <img src="assets/img/tof9.png" class="img-fluid" alt=""></p>
   <br>
-                <input type="radio" name="question3">True<br>
+                <input type="radio" name="question29" id="correct29">True<br>
                 <br>
-                <input type="radio" name="question3" id="correct3">Fasle<br>
+                <input type="radio" name="question29" >Fasle<br>
                 <br>
 <p>10. We can check through the composition of functions to see if they are inverse functions. If x is the result, then the functions are inverses.</p>
 <br>
-                <input type="radio" name="question3">True<br>
+                <input type="radio" name="question30" id="correct30">True<br>
                 <br>
-                <input type="radio" name="question3" id="correct3">Fasle<br>
+                <input type="radio" name="question30">Fasle<br>
                 <br>
         </div>
 <input type="submit" name="submit" value="SubmitQuiz" onClick="result()">
